Image refactoring (build and run)
- change base image to exoplatform/jdk:8-ubuntu-1804
- rework the image build to be close to exoplatform/exo images
- add Tomcat HTTP thread pool configuration
- add Tomcat Access Log capability
- add JVM loggc capability
- add JMX capability
- add a Docker Compose sample file
- document some eXo JVM parameters
- documentation refactoring